--- a/style.css
+++ b/style.css
@@ -68,6 +68,12 @@ footer{
     padding: 30px 0 0 13px;
 }
 @media (max-width: 440px) {
+    body{
+        margin: 0 auto;
+    }
+    header{
+        max-width: 100%;
+    }
     .first__tittle{
         padding-left: 21px;
     }
