--- a/style.css
+++ b/style.css
@@ -83,8 +83,9 @@ footer{
         width: 362px;
     }
     .first__card{
-        width: 359px;
+        width: 373px;
         height: 200px;
+        margin-left: 18px;
     }
     .card__paragraph{
         padding-top: 8px;
@@ -94,11 +95,13 @@ footer{
         position: relative;
         top: 64%;
         width: 91.4%;
-        width: 397px;
+        width: 410px;
         left: 0;
         margin-left: 0px;
+        text-align: center;
     }
     .footer__paragraph{
         padding-top: 15px;
+        padding-left: 2px;
     }
 }
