--- a/style.css
+++ b/style.css
@@ -110,6 +110,9 @@ a:not(:last-child){
     body{
         width: 100%;
     }
+    header{
+        width: 100%;
+    }
     .first{
         display: flex;
         flex-direction: column;
@@ -127,7 +130,7 @@ a:not(:last-child){
     }
     .first__card{
         height: 200px;
-        width: 420px;
+        width: 400px;
     }
     .footer{
         position: relative;
