--- a/style.css
+++ b/style.css
@@ -72,7 +72,7 @@ a:not(:last-child){
 @media (max-width: 440px) {
     body{
         margin: 0;
-        width: 100%;
+        max-width: 100%;
     }
     header{
         width: 79%;
